--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "browser-sync start --server --files 'dist/css/**/*.css,dist/js/**/*.js,dist/html/**/*.html'"
+    "dev": "browser-sync start --server --files 'dist/*'"
   },
   "repository": {
     "type": "git",
